commit from githubdesktop

--- a/sjtuthesis.cfg
+++ b/sjtuthesis.cfg
@@ -132,7 +132,7 @@
 \def\sjtu@listtablename{表格索引}
 \def\sjtu@algorithmicrequire{输入:}
 \def\sjtu@algorithmicensure{输出:}
-\def\sjtu@listalgorithmname{算法索引}
+\def\sjtu@listalgorithmname{公式索引}
 \def\sjtu@nomenclature{缩略语中英文对照表}
 %% labels in the summary
 \def\sjtu@label@summary{全文总结}
